--- a/views/oneone.ejs
+++ b/views/oneone.ejs
@@ -42,14 +42,14 @@
                 <div class='dashboard_blur display_none' id='dashboard_blur'></div>
             </div>
             <div class='local_video_container'>
-                <video class='local_video' id='local_video' muted autoplay></video>
+                <video class='local_video' id='local_video' autoplay></video>
             </div>
         </div>
         <div class='call_container'>
             <div class='videos_container'>
                 <div id='video_placeholder' class='videos_placeholder'>
                 </div>
-                <video class='remote_video display_none' muted autoplay id='remote_video'></video>
+                <video class='remote_video display_none' autoplay id='remote_video'></video>
                 <div class='call_buttons_container display_none' id='call_buttons'>
                     <button class='call_button_small' id='mic_button'>
                         <img src='/images/mic.png' id='mic_button_image'></img>
